# agentic-sdr

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  run.sh
src/sdr/: __init__.py  agents.py  config.py  email.py  example.py  main.py  manager.py  tools.py
